--- a/gts/Web.config
+++ b/gts/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 
 <!--
   For more information on how to configure your ASP.NET application, please visit
@@ -7,9 +7,7 @@
 
 <configuration>
   <connectionStrings>
-    <add name="pkmnFoundationsConnectionString"
-         connectionString="Server=gts;Database=gts;User ID=gts;Password=gts;Pooling=true;charset=utf8;Allow User Variables=True"
-         providerName="MySql.Data.MySqlClient" />
+    <add name="pkmnFoundationsConnectionString" connectionString="Server=gts;Database=gts;User ID=gts;Password=gts;Pooling=true;charset=utf8;Allow User Variables=True" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
 
   <appSettings>
@@ -26,19 +24,19 @@
 
     <membership>
       <providers>
-        <clear/>
+        <clear />
       </providers>
     </membership>
 
     <profile>
       <providers>
-        <clear/>
+        <clear />
       </providers>
     </profile>
 
     <roleManager enabled="false">
       <providers>
-        <clear/>
+        <clear />
       </providers>
     </roleManager>
 
@@ -47,7 +45,16 @@
   </system.web>
 
   <system.webServer>
-    <modules runAllManagedModulesForAllRequests="true"/>
+    <modules runAllManagedModulesForAllRequests="true" />
     <httpErrors existingResponse="PassThrough"></httpErrors>
   </system.webServer>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+
 </configuration>
