--- a/GlobalTerminalService/app.config
+++ b/GlobalTerminalService/app.config
@@ -1,20 +1,25 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 
 <configuration>
   
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
   </startup>
 
   <runtime>
     <!-- Too bad AppContexts are only supported on .NET 4.6+ and don't seem to override ciphers disabled in the registry anyway. -->
-    <AppContextSwitchOverrides value="Switch.System.Net.DontEnableSchUseStrongCrypto=true"/>
+    <AppContextSwitchOverrides value="Switch.System.Net.DontEnableSchUseStrongCrypto=true" />
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+
   </runtime>
   
   <connectionStrings>
-    <add name="pkmnFoundationsConnectionString"
-         connectionString="Server=gts;Database=gts;User ID=gts;Password=gts;Pooling=true;charset=utf8;Allow User Variables=True"
-         providerName="MySql.Data.MySqlClient" />
+    <add name="pkmnFoundationsConnectionString" connectionString="Server=gts;Database=gts;User ID=gts;Password=gts;Pooling=true;charset=utf8;Allow User Variables=True" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
 
 </configuration>
