--- a/towerRestorer4/App.config
+++ b/towerRestorer4/App.config
@@ -1,11 +1,17 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="pkmnFoundationsConnectionString"
-         connectionString="Server=gts;Database=gts;User ID=gts;Password=gts;Pooling=true;charset=utf8;Allow User Variables=True"
-         providerName="MySql.Data.MySqlClient" />
+    <add name="pkmnFoundationsConnectionString" connectionString="Server=gts;Database=gts;User ID=gts;Password=gts;Pooling=true;charset=utf8;Allow User Variables=True" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <startup> 
         
-    <supportedRuntime version="v2.0.50727"/></startup>
+    <supportedRuntime version="v2.0.50727" /></startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
