--- a/web/Web.config
+++ b/web/Web.config
@@ -7,9 +7,7 @@
 
 <configuration>
   <connectionStrings>
-    <add name="pkmnFoundationsConnectionString"
-         connectionString="Server=gts;Database=gts;User ID=gts;Password=gts;Pooling=true;charset=utf8;Allow User Variables=True"
-         providerName="MySql.Data.MySqlClient" />
+    <add name="pkmnFoundationsConnectionString" connectionString="Server=gts;Database=gts;User ID=gts;Password=gts;Pooling=true;charset=utf8;Allow User Variables=True" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
 
   <system.web>
@@ -49,9 +47,16 @@
   <system.data>
     <DbProviderFactories>
       <remove invariant="MySql.Data.MySqlClient" />
-      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" 
-           description=".Net Framework Data Provider for MySQL" 
-           type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
     </DbProviderFactories>
   </system.data>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+
 </configuration>
